examples/type_system/failing/153_match_branch_conflict_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let value: Int = match true {
        true -> 1,
        false -> "x",
    }
}
